<resources>
    <string name="app_name">Inventory app</string>
    <string name="title_new_product">New product</string>
    <string name="title_edit_product">Product detail</string>
    <string name="save_product">Save product</string>
    <string name="delete_product">Delete product</string>
    <string name="delete_all">Delete all products</string>
    <string name="insert_product_successful">Product saved</string>
    <string name="insert_product_failed">Error with saving product</string>
    <string name="update_product_successful">Product updated</string>
    <string name="update_product_failed">Error with updating product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this pet?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add">+</string>
    <string name="sell">-</string>
    <string name="sale_ok">Sold!</string>
    <string name="sale_failed">Sell failed!</string>
    <string name="out_of_stock">Out of stock!</string>
    <string name="invalid_uri">Cannot query unsupported URI</string>
    <string name="invalid_data_on_save">Please fill all fields</string>
    <string name="invalid_product_name">Invalid product name</string>
    <string name="invalid_price">Invalid price</string>
    <string name="invalid_quantity">Invalid quantity</string>
    <string name="invalid_supplier">Invalid supplier</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="saving_error">Error saving product</string>
    <string name="saved_info">Product saved</string>
    <string name="added">Product added!</string>
    <string name="add_failed">Failed to add!</string>
    <string name="product_name">Product name:</string>
    <string name="product_price">Product price:</string>
    <string name="product_quantity">Product quantity:</string>
    <string name="supplier_name">Supplier name:</string>
    <string name="supplier_phone">Phone number:</string>
    <string name="no_phone">Unable to call supplier!</string>
    <string name="order">Order</string>
    <string name="title">Welcome to the Inventory App!</string>
    <string name="instructions">Now, you can use the menu button to Add New Product, don\'t forget to fill 9-digits long phone number for supplier!</string>
</resources>
